--- a/PI2-LOJA-ROUP/src/main/java/Telas/telaProduto.form
+++ b/PI2-LOJA-ROUP/src/main/java/Telas/telaProduto.form
@@ -341,7 +341,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Bahnschrift" size="24" style="0"/>
+                  <Font name="Algerian" size="24" style="0"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
